--- a/public/manifest.json
+++ b/public/manifest.json
@@ -22,5 +22,5 @@
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff",
-  "permissions": ["http://localhost:8080"]
+  "permissions": ["https://lagalt-service.herokuapp.com"]
 }
